# zalgo-cli

./: .bumpversion.cfg  README.md  pyproject.toml
zalgo_cli/: __init__.py  app.py  cli.py
